<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">RedSquare</string>

    <!-- Menu page -->
    <string name="menu_play_button">Play</string>
    <string name="menu_local_highscore_button">Local High Score</string>
    <string name="menu_global_highscore_button">Global High Score</string>
    <string name="menu_help_button">Help</string>
    <string name="menu_settings_button">Settings</string>
    <string name="menu_about_label">Made by Bastiaan van der Plaat</string>

    <!-- Game page -->
    <string name="game_score_label" formatted="false">Score: %d</string>
    <string name="game_time_label" formatted="false">Time: %d:%02d</string>
    <string name="game_level_label" formatted="false">Level: %d</string>

    <!-- Game Over page -->
    <string name="gameover_title">Game Over</string>
    <string name="gameover_score_label" formatted="false">Score: %d</string>
    <string name="gameover_time_label" formatted="false">Time: %d:%02d</string>
    <string name="gameover_level_label" formatted="false">Level: %d</string>
    <string name="gameover_back_button">Back</string>

    <!-- Local highscore page -->
    <string name="local_highscore_title">Local High Score</string>
    <string name="local_highscore_back_button">Back</string>

    <!-- Global highscore page -->
    <string name="global_highscore_title">Global High Score</string>
    <string name="global_highscore_loading">Loading global high scores...</string>
    <string name="global_highscore_error">Can\'t load the global high scores</string>
    <string name="global_highscore_back_button">Back</string>

    <!-- Help page -->
    <string name="help_title">Help</string>
    <string name="help_text_label">
        RedSquare is an classic 2D action game.\n
        Click and hold the red square.\n
        Now move so that you neither touch the wall\n
        nor get hit by any of the blue squares.\n
        If you make it to 60 seconds, you are\n
        doing brilliantly!
    </string>
    <string name="help_back_button">Back</string>

    <!-- Settings page -->
    <string name="settings_title">Settings</string>
    <string name="settings_name">Player name</string>

    <string name="settings_language">Language</string>
    <string name="settings_language_alert_title_label">Language</string>
    <string name="settings_language_alert_cancel_button">Cancel</string>
    <string name="settings_language_english">English</string>
    <string name="settings_language_dutch">Nederlands</string>
    <string name="settings_language_system">Use system default</string>

    <string name="settings_theme">Theme</string>
    <string name="settings_theme_alert_title_label">Theme</string>
    <string name="settings_theme_alert_cancel_button">Cancel</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_battery_saver">Set by Battery Saver</string>
    <string name="settings_theme_system">Use system default</string>

    <string name="settings_back_button">Back</string>
</resources>
